--- a/LidiaMadeTours/LidiaMadeTours.csproj
+++ b/LidiaMadeTours/LidiaMadeTours.csproj
@@ -3,7 +3,7 @@
   <PropertyGroup>
     <OutputType>WinExe</OutputType>
     <TargetFramework>net6.0-windows</TargetFramework>
-    <RootNamespace>TailorMadeTours.Net6._0</RootNamespace>
+    <RootNamespace>LidiaMadeTours</RootNamespace>
     <Nullable>enable</Nullable>
     <UseWPF>true</UseWPF>
   </PropertyGroup>
